Backport patch for 150482 to the KDE 4.2 branch.

It'll be in KDE 4.2.1

BUG: 150482


svn path=/branches/KDE/4.2/kdenetwork/kopete/; revision=921978