protocols/yahoo/libkyahoo/modifybuddytask.cpp
@@ -31,6 +31,55 @@ ModifyBuddyTask::~ModifyBuddyTask()
 {
 }
 
+bool ModifyBuddyTask::take( Transfer* transfer )
+{
+     if( !forMe( transfer ) )
+	  return false;
+
+     YMSGTransfer *t = static_cast<YMSGTransfer *>(transfer);
+
+     bool success = t->firstParam(66) == "0";
+
+     switch(t->service())
+     {
+     case Yahoo::ServiceBuddyAdd:
+	  emit buddyAddResult(m_target, m_group, success);
+	  break;
+     case Yahoo::ServiceBuddyRemove:
+	  emit buddyRemoveResult(m_target, m_group, success);
+	  break;
+     case Yahoo::ServiceBuddyChangeGroup:
+	  emit buddyChangeGroupResult(m_target, m_group, success);
+     default:
+	  return false;
+     }
+
+     if(success)
+	  setSuccess();
+     else
+	  setError();
+
+     return true;
+}
+
+bool ModifyBuddyTask::forMe( const Transfer* transfer ) const
+{
+     const YMSGTransfer *t = 0L;
+     t = dynamic_cast<const YMSGTransfer*>(transfer);
+     
+     if(!t)
+	  return false;
+
+     if( (t->service() == Yahoo::ServiceBuddyAdd ||
+	  t->service() == Yahoo::ServiceBuddyRemove) &&
+	 t->firstParam(7) == m_target)
+     {
+	  return true;
+     }
+     
+     return false;
+}
+
 void ModifyBuddyTask::onGo()
 {
 	kDebug(YAHOO_RAW_DEBUG) ;
@@ -47,27 +96,27 @@ void ModifyBuddyTask::onGo()
 			moveBuddy();
 		break;
 	}
-
-
-	
-	setSuccess();
 }
 
 void ModifyBuddyTask::addBuddy()
 {
-	YMSGTransfer *t = new YMSGTransfer(Yahoo::ServiceAddBuddy);
+	YMSGTransfer *t = new YMSGTransfer(Yahoo::ServiceBuddyAdd);
 	t->setId( client()->sessionID() );
+	t->setParam( 65, m_group.toLocal8Bit() );
+	t->setParam( 97, 1 );
 	t->setParam( 1, client()->userId().toLocal8Bit() );
-	t->setParam( 7, m_target.toLocal8Bit() );
-	t->setParam( 14, m_message.toUtf8() );
-	t->setParam( 65, m_group.toLocal8Bit() );	
-	t->setParam( 97, 1 );	// UTF-8
+	t->setParam( 302,  319 );
+	t->setParam( 300,  319 );
+	t->setParam( 7,  m_target.toLocal8Bit() );
+	t->setParam( 334,  0 );
+	t->setParam( 301, 319 );
+	t->setParam( 303, 319 );	// UTF-8
 	send( t );
 }
 
 void ModifyBuddyTask::removeBuddy()
 {
-	YMSGTransfer *t = new YMSGTransfer(Yahoo::ServiceRemBuddy);
+	YMSGTransfer *t = new YMSGTransfer(Yahoo::ServiceBuddyRemove);
 	t->setId( client()->sessionID() );
 	t->setParam( 1, client()->userId().toLocal8Bit() );
 	t->setParam( 7, m_target.toLocal8Bit() );
